# eurorack

./: .gitmodules
plaits/: CMakeLists.txt  resources.cc  user_data.h
plaits/dsp/: dsp.h  voice.cc
plaits/dsp/fm/: algorithms.h
plaits/dsp/oscillator/: sine_oscillator.h
